Fix movie poster alignment on overview page

--- a/static/style.css
+++ b/static/style.css
@@ -144,14 +144,3 @@ a.navbar-text.navbar-right {
     display: flex;
     flex:1 0 auto;
 }
-
-#overview {
-   display: flex;
-   flex-direction:column;
-   align-content:stretch;
-}
-
-#overview-body {
-   display: flex;
-   flex-grow:1;
-}
